# egui-android-framework

./: .gitignore  CURRENT_TASK_LIST.md  Cargo.toml  README.md  Task_JNI_мост_kill_restore.md  fin_nav.md
.agents/skills/android-egui-architecture/: SKILL.md  SKILL.md.bak
.agents/skills/arch-result/: SKILL.md
.agents/skills/egui-android-guide/: SKILL.md
.agents/skills/integration-helper-skill/: SKILL.md
.agents/skills/task-evaluation-full/: SKILL.md
.agents/skills/task-evaluation-short/: SKILL.md
.agents/skills/task-minder/: SKILL.md
.agents/skills/tasks/: uiwrapper_refact.md
.cargo/: config.toml
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/egui_android/: EguiActivity.kt
android/app/src/main/res/values/: styles.xml
crates/android/: Cargo.toml
crates/android/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: back_dispatcher.rs  component.rs  component_context.rs  component_context2.rs  component_node.rs  constraints.rs  lib.rs  lifecycle.rs  persistent_state.rs  state_keeper.rs  theme.rs  ui_wrapper.rs  view.rs  widget.rs
crates/core/tests/: lifecycle_tests.rs
crates/framework/: Cargo.toml  README.md
crates/framework/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros/tests/: integration.rs
crates/navigation/: Cargo.toml  README.md
crates/navigation/src/: child_stack.rs  child_stack_manager.rs  child_stack_save_tests.rs  component_factory.rs  component_state.rs  lib.rs
crates/platform/: Cargo.toml  README.md
crates/platform-android/: Cargo.toml  README.md
crates/platform-android/kotlin/: EguiActivity.kt
crates/platform-android/src/: egl_backend.rs  event.rs  graphics.rs  input.rs  input_processing.rs  insets.rs  lib.rs  lifecycle.rs  loop.rs  platform_state.rs  run.rs  saved_state_jni.rs  system_bars.rs  theme.rs  waker.rs
crates/platform-android/src/backend/: gl_backend.rs  mod.rs  native_backend.rs
crates/platform/src/: config.rs  event.rs  frame.rs  lib.rs  platform.rs  theme.rs  waker.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: application.rs  dispatcher.rs  dyn_dispatcher.rs  lib.rs  message_envelope.rs  runtime_context.rs  saved_state.rs  store.rs  ui_notifier.rs
crates/runtime/tests/: error_tests.rs  ui_notifier_tests.rs
crates/ui/: Cargo.toml  README.md  ui-crate-contract.md  ui-crate-guide.md
crates/ui/src/: builders.rs  constraints.rs  debug_log.rs  lib.rs  modifier.rs  remember.rs  ui_wrapper.rs
crates/ui/src/animation/: animate.rs  animated_visibility.rs  fade.rs  mod.rs  slide.rs
crates/ui/src/containers/: column.rs  lazy_column.rs  mod.rs  row.rs  stack.rs
crates/ui/src/modifier/: legacy.rs  mod.rs
crates/ui/src/theme/: colors.rs  colors_palette.rs  material.rs  mod.rs  shapes.rs  system_theme_colors.rs  typography.rs
crates/ui/src/widgets/: button.rs  icon.rs  mod.rs  spacer.rs  text.rs
crates/ui/tests/: TEST_CONTRACT.md  layout_tests.rs  remember_tests.rs  widget_tests.rs
examples/counter/: AndroidManifest.xml  Cargo.toml  run_android.sh
examples/counter/android/app/src/main/: AndroidManifest.xml
examples/counter/android/app/src/main/java/com/example/egui_android/: EguiActivity.kt
examples/counter/res/values/: styles.xml
examples/counter/src/: app.rs  component.rs  data_layer.rs  lib.rs  msg.rs  view.rs
examples/counter2/: Cargo.toml
examples/counter2/src/: app.rs  component.rs  data_layer.rs  lib.rs  msg.rs  view.rs
examples/counter_example/: Cargo.toml
examples/counter_example/src/: app.rs  component.rs  data_layer.rs  lib.rs  view.rs
examples/gl_app/: AndroidManifest.xml  Cargo.toml  run_android.sh
examples/gl_app/src/: lib.rs
examples/showcase/: AndroidManifest.xml  Cargo.toml  run_android.sh
examples/showcase/android/app/: build.gradle
examples/showcase/android/app/src/main/: AndroidManifest.xml
examples/showcase/android/app/src/main/java/com/example/egui_android/: EguiActivity.kt
examples/showcase/res/values/: styles.xml
examples/showcase/src/: app.rs  factory.rs  lib.rs  navigation.rs  navigation_host.rs  root_component.rs
examples/showcase/src/components/: mod.rs
examples/showcase/src/screens/: animations.rs  back_custom.rs  containers.rs  home.rs  mod.rs  modifier_value.rs  modifiers.rs  nested.rs  nested_sub.rs  state_screen.rs  themes.rs  widgets.rs
patches/egui/: .cargo_vcs_info.json  Cargo.toml  PATCH_NOTES.md
patches/egui/src/: ui.rs
patches/egui/src/containers/: scroll_area.rs
patches/egui/src/input_state/: mod.rs
scripts/: build_android.sh
src/: activity.rs  app2.rs  application.rs  child_stack.rs  component.rs  component_context.rs  egui_subscriber.rs  error.rs  lib.rs  lifecycle.rs  store.rs  ui_notifier.rs  view.rs  view_model.rs
src/android/: egl_backend.rs  input.rs  mod.rs  run.rs  run2.rs
src/animation/: animate.rs  animated_visibility.rs  fade.rs  mod.rs  slide.rs
src/containers/: column.rs  lazy_column.rs  mod.rs  row.rs  stack.rs
src/modifiers/: aligned.rs  background.rs  clickable.rs  mod.rs  padded.rs  sized.rs
src/state/: mod.rs
src/tests/: activity_tests.rs  animation_tests.rs  application_tests.rs  container_tests.rs  error_tests.rs  integration_tests.rs  lifecycle_tests.rs  mod.rs  remember_tests.rs  theme_tests.rs  ui_notifier_tests.rs  view_model_tests.rs  widget_tests.rs
src/theme/: colors.rs  material.rs  mod.rs  shapes.rs  typography.rs
src/widgets/: button.rs  icon.rs  mod.rs  spacer.rs  text.rs
