[package]
name = "egui-android-framework"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Alpha: lightweight framework for running egui applications on Android"
keywords = ["egui", "android", "gui", "framework", "gles"]
categories = ["gui", "rendering::graphics-api"]
repository = "https://gitverse.ru/Tofy3434/egui-android-framework"
documentation = "https://docs.rs/egui-android-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2.0"
log = "0.4"

egui = "0.31"
egui_glow = { version = "0.31", optional = true }
glow = { version = "0.16", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
egui_glow = { version = "0.31" }
glow = { version = "0.16" }
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
ndk = "0.9"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
debug = "none"
