[workspace]
resolver = "2"
members = [
    "crates/platform",
    "crates/platform-android",
    "crates/runtime",
    "crates/core",
    "crates/ui",
    "crates/navigation",
    "crates/framework",
    "examples/counter",
    "examples/showcase",
]

[workspace.package]
version = "0.3.3-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitverse.ru/Tofy3434/egui-android-framework"

[workspace.dependencies]
thiserror = "2.0"
log = "0.4"
egui = { version = "0.35" }
egui_glow = { version = "0.35" }
glow = { version = "0.17" }
tokio = { version = "1", features = ["sync"] }
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
ndk = "0.9"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
debug = "none"

[patch.crates-io]
egui = { path = "patches/egui" }
