[package]
name = "egui-android-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "MVI primitives — Component, ViewFn, Lifecycle"

[dependencies]
egui = { workspace = true }
log = { workspace = true }

egui-android-runtime = { version = "0.3.3-alpha.2", path = "../runtime" }
