[package]
name = "egui-android-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "MVI primitives — Component, ViewFn, Lifecycle"

[dependencies]
egui = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

egui-android-runtime = { version = "0.4.0-alpha.1", path = "../runtime" }
