[package]
name = "egui-android-framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Umbrella crate — re-exports all egui-android-* crates"

[dependencies]
egui-android-core = { version = "0.3.3-alpha.1", path = "../core" }
egui-android-ui = { version = "0.3.3-alpha.1", path = "../ui" }
egui-android-navigation = { version = "0.3.3-alpha.1", path = "../navigation" }
egui-android-runtime = { version = "0.3.3-alpha.1", path = "../runtime" }
egui-android-platform = { version = "0.3.3-alpha.1", path = "../platform" }
egui-android-platform-android = { version = "0.3.3-alpha.1", path = "../platform-android" }
