[package]
name = "egui-android-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Процедурные макросы для egui-android-framework: #[component], #[persistent]"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
egui-android-core = { version = "0.4.0-alpha.1", path = "../core" }
egui-android-runtime = { version = "0.4.0-alpha.1", path = "../runtime" }
egui-android-framework = { version = "0.4.0-alpha.1", path = "../framework" }
serde = { workspace = true }
bincode = { workspace = true }
