[package]
name = "egui-android-navigation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Navigation layer — ChildStack, Router"

[dependencies]
egui = { workspace = true }
log = { workspace = true }

egui-android-core = { version = "0.3.3-alpha.3", path = "../core" }
egui-android-ui = { version = "0.3.3-alpha.3", path = "../ui" }

[dev-dependencies]
egui-android-runtime = { version = "0.3.3-alpha.3", path = "../runtime" }
