[package]
name = "egui-android-platform-android"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Android platform implementation for egui-android-framework"

[target.'cfg(target_os = "android")'.dependencies]
egui = { workspace = true }
egui_glow = { workspace = true }
glow = { workspace = true }
log = { workspace = true }
android-activity = { workspace = true }
android_logger = { workspace = true }
ndk = { workspace = true }
libc = { workspace = true }
jni = "0.21"

egui-android-platform = { version = "0.3.3-alpha.2", path = "../platform" }
egui-android-runtime = { version = "0.3.3-alpha.2", path = "../runtime" }
egui-android-core = { version = "0.3.3-alpha.2", path = "../core" }

[target.'cfg(not(target_os = "android"))'.dependencies]
egui = { workspace = true }
log = { workspace = true }

egui-android-platform = { version = "0.3.3-alpha.2", path = "../platform" }
egui-android-core = { version = "0.3.3-alpha.2", path = "../core" }
