[package]
name = "egui-android-platform-android"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Android platform: EGL, input, lifecycle, и главный цикл для egui. Включает run() для GameActivity."

[[bin]]
name = "cargo-android-init"
path = "src/bin/cargo-android-init.rs"

[target.'cfg(target_os = "android")'.dependencies]
egui = { workspace = true }
egui_glow = { workspace = true }
glow = { workspace = true }
log = { workspace = true }
android-activity = { workspace = true }
android_logger = { workspace = true }
ndk = { workspace = true }
libc = { workspace = true }
jni = "0.21"

egui-android-platform = { version = "0.4.0-alpha.1", path = "../platform" }
egui-android-runtime = { version = "0.4.0-alpha.1", path = "../runtime" }

[target.'cfg(not(target_os = "android"))'.dependencies]
egui = { workspace = true }
log = { workspace = true }

egui-android-platform = { version = "0.4.0-alpha.1", path = "../platform" }
egui-android-runtime = { version = "0.4.0-alpha.1", path = "../runtime" }
