[package]
name = "egui-android-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Runtime layer — Application, Dispatcher, StateStore, UiNotifier"

[dependencies]
egui = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
egui-android-platform = { version = "0.3.3-alpha.3", path = "../platform" }
