[package]
name = "egui-android-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "UI layer — remember, builders, modifiers"

[dependencies]
egui = { workspace = true }
log = { workspace = true }

egui-android-core = { version = "0.4.0-alpha.1", path = "../core" }
egui-android-runtime = { version = "0.4.0-alpha.1", path = "../runtime" }
