[package]
name = "egui-android-counter"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Пример счётчика на GameActivity"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui-android-framework = { path = "../../crates/framework" }
egui = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true }
android_logger = { workspace = true }
