[package]
name = "egui-android-counter2"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
egui = "0.31"
log = "0.4"

[dependencies.egui-android-framework]
path = "../../"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
android-activity = "0.6"
