[package]
name = "egui-android-counter2"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
egui-android-framework = { path = "../.." }
egui = "0.31"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
android-activity = "0.6"
