[package]
name = "egui-showcase"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Showcase-приложение на GameActivity"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui-android-framework = { path = "../../crates/framework" }
egui = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true }
android_logger = { workspace = true }
